--- a/src/main/resources/templates/userCommon.html
+++ b/src/main/resources/templates/userCommon.html
@@ -62,7 +62,7 @@
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts"
                         aria-expanded="false" aria-controls="collapseLayouts">
                         <div class="sb-nav-link-icon"><i class="fas fa-calendar-alt"></i></div>
-                        课程管理
+                        商品管理
                         <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                     </a>
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
