--- a/src/main/resources/templates/userCommon.html
+++ b/src/main/resources/templates/userCommon.html
@@ -74,21 +74,22 @@
                     </div>
 
                     <!--链接区域-->
-                                    <div class="sb-sidenav-menu-heading">有需要自取</div>
-                                    <a class="nav-link" href="https://github.com/JDC2001/YiChaoShi_java.git">
-                                        <div class="sb-nav-link-icon"><i class="fab fa-github"></i></div>
-                                        项目地址
-                                    </a>
+                    <div class="sb-sidenav-menu-heading">有需要自取</div>
+                    <a class="nav-link" href="https://github.com/JDC2001/YiChaoShi_java.git">
+                        <div class="sb-nav-link-icon"><i class="fab fa-github"></i></div>
+                        项目地址
+                    </a>
 
 
 
-                    <!--                    <a class="nav-link" href="#"></a>-->
-                    <!--                    <button onclick="my()">点我有惊喜！</button>-->
-                    <!--                    <script>-->
-                    <!--                        function my() {-->
-                    <!--                            document.write("<s>欢迎来到我的超市</s>");-->
-                    <!--                        }-->
-                    <!--                    </script>-->
+                    <button onclick="my()">点我有惊喜！</button>
+                    <script>
+                        function my() {
+                            var img = document.createElement("img");
+                            img.src = "/img/java.jpg";
+                            document.body.appendChild(img);
+                        }
+                    </script>
                 </div>
             </div>
 
