--- a/src/main/resources/templates/userRegister.html
+++ b/src/main/resources/templates/userRegister.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="gym-management-system" />
     <meta name="author" content="ZhangMing" />
-    <title>易超市管理系统-会员登录</title>
+    <title>易超市管理系统-会员注册</title>
     <link href="/static/css/styles.css" th:href="@{css/styles.css}" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
     <script type="text/javascript">
-        function checkSubmit(loginForm) {
-            if (loginForm.memberAccount.value == '') {
-                alert("请输入账号");
-                loginForm.memberAccount.focus();
+        function checkSubmit(registerForm) {
+            if (registerForm.memberAccount.value == '') {
+                alert("请输入你的账号");
+                registerForm.memberAccount.focus();
                 return false;
             }
-            if (loginForm.memberPassword.value == '') {
-                alert("请输入密码");
-                loginForm.memberPassword.focus();
+            if (registerForm.memberPassword.value == '') {
+                alert("请输入你的密码");
+                registerForm.memberPassword.focus();
                 return false;
             }
             return true;
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class="bg-primary" th:style="'background-image: url(/img/bg.jpg);background-size: 100%, 100%'">
+<body class="bg-primary" th:style="'background-image: url(/img/bg-4.jpg);background-size: 100%, 100%'">
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
@@ -38,10 +38,10 @@
                         <div class="col-lg-5">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header">
-                                    <h3 class="text-center font-weight-light my-4">会员登录</h3>
+                                    <h3 class="text-center font-weight-light my-4">注册会员</h3>
                                 </div>
                                 <div class="card-body">
-                                    <form th:action="@{/userLogin}" method="post" name="loginForm"
+                                    <form th:action="@{/userRegister}" method="post" name="registerForm"
                                         onsubmit="return checkSubmit(this)">
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputAccount" name="memberAccount"
@@ -54,24 +54,26 @@
                                                 type="password" placeholder="Password" />
                                             <label for="inputPassword">密码</label>
                                         </div>
-                                        <div class="form-check mb-3">
+                                        <!-- <div class="form-check mb-3">
                                             <input class="form-check-input" id="inputRememberPassword" type="checkbox"
                                                 value="" />
                                             <label class="form-check-label" for="inputRememberPassword">记住密码</label>
-                                        </div>
+                                        </div> -->
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <input type="submit" class="btn btn-success" value="登录">
-                                            <a class="btn btn-primary" th:href="@{/}">管理员登录</a>
+                                            <input type="submit" class="btn btn-success" value="注册"
+                                                onclick="register()">
                                         </div>
-                                        <div class="d-flex align-items-center justify-content-between mt-4 mb-5"
-                                            style="margin-right: 0px;">
+                                        <script>
+                                            function register() {
+                                                alert("目前无法注册新账号！")
+                                            }
+                                        </script>
+                                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <!-- <input type="submit" class="btn btn-success" value=""> -->
-                                            <a class="btn btn-primary" th:href="@{/toUserRegister}"
-                                                style="margin-left: auto;">会员注册</a>
+                                            <a class="btn btn-primary" th:href="@{/toUserLogin}">管理员登录</a>
                                         </div>
                                     </form>
-                                    <div th:text=" ${msg}" style="margin-top: 20px;text-align: center;color: red">
-                                    </div>
+                                    <div th:text="${msg}" style="margin-top: 20px;text-align: center;color: red"></div>
                                 </div>
                             </div>
                         </div>
